Adds reading notes

--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,15 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-04-24  尼采见女人为何要带鞭子
+故事：尼采，莎乐美
+莎乐美一生创作很多，她的回忆录更是研究许多大师内心深处的最直接材料。
+她遇到的每一个有思想的男人，无不被她吸引，或明或暗地深深爱恋着她。
+德国作家林德·扎尔贝曾说她是：
+“具有非凡力量的缪斯”：“男人在与她这位女性的交往中受孕，与她邂逅数月，就能为这个世界产下一个精神的新生儿！”
+
+
+
 ## 2017-04-23  无法计算的情感
 故事：可口可乐换口味
 “有些事情，你要用心才听得到！”这是《小王子》中，狐狸对小王子说得最宝贵的话。
