--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,15 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-04-25  为什么要读《红楼梦》：中国依然是一个大贾府
+美国人会抱怨中国人在商业上不守承诺；不愿意通过妥协实现共赢；相信权威；在商业中不以利益为重而特别看重亲情等等。
+在农业文明中，商品交换从来不是文明的主线，自给自足才是。而实现自给自足，就要靠集体的力量，特别是家族的力量对抗天灾人祸，完成大工程，解决所有的问题。
+
+世界的文明有两条主线。
+一条是以古埃及、古印度和古代中国为轴线的农业文明，后来的法国、德国和前苏联都是沿袭了这根主线。
+另一条是以美索不达米亚、古希腊为代表的商业文明，后来意大利、荷兰、英国、美国和后来的日本则延续了这条线。
+
+
 ## 2017-04-22  小鲜肉和戏骨：橘子和苹果的对比
 在投资领域，因为一次正确的投资挣了大钱的大有人在，这并不困难，困难的是能够长期稳定地挣钱，而要做到这一点就要守纪律。
 
