--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,30 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-04-25  到底什么是厉害的决策法
+决策，是面对不容易判断优劣的几个选项，做出正确的选择。说白了，决策就是拿个主意。决策是一个非常纠结的心理过程。
+
+科学的决策一共分四步：
+第一步是看看自己都有哪些选项。
+一般人的做法是有什么选项就从这些选项里选，而正确的做法是想想你能不能给自己增加几个选项。
+
+第二步是评估每个选项的优劣。
+这一步人们常犯的错误是“确认偏误” —— 如果你先入为主已经有了看法，比如说你已经“喜欢”某个选项，你就可能会不顾事实坚持这个选项。
+
+第三步是从这些选项中选择一个。
+这一步人们常犯的错误是被自己的短期情感左右。比如一份新工作，许诺了一笔很高的工资，
+这个高工资就有一个特别大的吸引力，你从情感上会特别想拿这笔钱。这时候一定要从长远考虑。
+
+第四步是对未来的不确定性得有一定的准备。
+首先做人要信守承诺，自己约的xx，含着泪也要xx，但是任何决策都不可能百分之一百正确，如果将来出现变故，你得有所准备。
+
+总结成四句话：
+  - 扩充你的选项；
+  - 用现实检验你的观点；
+  - 从长远考虑；
+  - 为一旦决策错误做好准备
+
+
 ## 2017-04-23  非虚构类作家开更好的车
 评论：读者对机器智能误解
 不知道为什么机器人护士不能理解老人，对症下药？这个结论似乎下得太草率了。
