--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,10 @@
 --------------------------------------------------------------------------------
 
 
+
+## 2017-04-24  如何提高自己的智商？
+
+
 ## 2017-04-17  知识究竟是什么？
 所谓知识，指的是能够指导我们做出更好的决策，且长期来看更可能会给我们带来更好结果的那些信息。
 体系化的知识，是更高级的知识。至于碎片化什么的，跟知识完全没关系。
