Adds reading notes.

--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -7,6 +7,19 @@
 
 
 ## 2017-04-24  如何提高自己的智商？
+操作系统跑起来，底层是概念与连接，上层运转的主要是什么呢？两样东西：
+  - 价值观
+  - 方法论
+
+我们的概念定义都很简单直白：所谓的“价值观”，就是不断分辨“什么更好？什么最好？”
+所谓的“方法论”就是不断思考“如何做？如何改进？”你可能早已经想到了：
+  - 价值观决定选择的质量（选择是人生头等大事）
+  - 方法论决定选择后行动的质量（行动构成人生）
+
+所谓智商，其实可以被看做是一个完整的操作系统：
+  1. 最底层是概念及其关联；
+  2. 再上面一层是价值观与方法论；
+  3. 再往上则是践行……
 
 
 ## 2017-04-17  知识究竟是什么？
