Adds reading notes.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -7,6 +7,17 @@
 
 # 个人篇
 
+
+## 2017-04-26  时间颗粒度，是一个人的职业化程度
+时间颗粒度为1天的人，喜欢说：你到北京了啊？那怎么不顺便绕到天津来看我一下啊？
+时间颗粒度为半天的人，喜欢说：你下午在办公室吗？我过来找你聊聊天。
+时间颗粒度为1小时的人，喜欢说：路上堵疯了，我还有一会儿就到，你等我一下啊。
+时间颗粒度为半小时的人，喜欢说：这事微信里说不清楚，我给你打电话吧。
+这些话都没错。但是如果别人不去天津看你，拒绝你的临时到访，不谅解你的迟到，或者不接你电话，你要理解，那只是因为他的“时间颗粒度”和你不同。
+
+你的时间颗粒度，会随着你越来越成功，时间越来越值钱，一定会变得越来越细。这会自然而然，不用强求。
+
+
 ## 2017-04-19  人生的不同，是由第三个8小时创造的
 时间有三重特性：交易、消费和投资。
 
