--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,13 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-04-26  为什么要读《红楼梦》：读经典的重要性
+每一个被尊敬的民族都有他史诗般的作品，了解这个民族就要读他们的史诗。
+古希腊有《荷马史诗》，意大利有《神曲》，英国有莎士比亚的名剧，德国有《浮士德》，
+俄罗斯有《战争与和平》、《静静的顿河》，日本有《源氏物语》，法国有《红与黑》，有《约翰·克利斯朵夫》等等。
+而我们中国则有《红楼梦》。
+
+
 ## 2017-04-25  为什么要读《红楼梦》：中国依然是一个大贾府
 美国人会抱怨中国人在商业上不守承诺；不愿意通过妥协实现共赢；相信权威；在商业中不以利益为重而特别看重亲情等等。
 在农业文明中，商品交换从来不是文明的主线，自给自足才是。而实现自给自足，就要靠集体的力量，特别是家族的力量对抗天灾人祸，完成大工程，解决所有的问题。
