--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,13 +5,18 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-04-26  微小失误，巨大浩劫
+故事：切尔诺贝利
+在哪里跌倒，就在哪里站起来？不对，在哪里跌倒，你要换个地方站起来，否则你会跌倒两次。
+看到别人在哪里跌倒，你最好别走过去，否则你会跟着跌倒。
+
+
 ## 2017-04-24  尼采见女人为何要带鞭子
 故事：尼采，莎乐美
 莎乐美一生创作很多，她的回忆录更是研究许多大师内心深处的最直接材料。
 她遇到的每一个有思想的男人，无不被她吸引，或明或暗地深深爱恋着她。
 德国作家林德·扎尔贝曾说她是：
 “具有非凡力量的缪斯”：“男人在与她这位女性的交往中受孕，与她邂逅数月，就能为这个世界产下一个精神的新生儿！”
-
 
 
 ## 2017-04-23  无法计算的情感
