Adds reading notes.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -7,6 +7,29 @@
 
 # 个人篇
 
+## 2017-05-04  如何用20小时，快速学习
+第一，花5小时，大量泛读；第二，花3小时，建立模型；第三，花2小时，请教专家；第四，花10小时，理解复述。
+
+
+## 2017-05-02  为什么人类不擅长谈恋爱
+什么是知识？
+知识就是已经被发现和证明的规律，它是确定的，不需要你通过自身的成功、挫败去验证，然后恍然大悟的那些规律。
+什么是技能？
+技能就是那些你以为你知道，但如果你没做过，就永远不会真的知道的事情。
+什么是态度？
+态度就是你选择的，用来看待这个世界的那副有色眼镜。
+
+
+## 2017-05-01  知识，是经验的升华
+“从行动归纳出经验，把经验升华为规律，用规律再指导行动。”这就是著名的“库博学习圈”
+知识的获取，源于对经验的升华和理论化。
+
+
+## 2017-04-27  职业化，就是商业世界的教养
+教养的本质，就是对外的分寸感，和对内的克制力。
+教养，一种在既定规则之下，对自己的克制。
+职业化，就是商业世界的教养。
+
 
 ## 2017-04-26  时间颗粒度，是一个人的职业化程度
 时间颗粒度为1天的人，喜欢说：你到北京了啊？那怎么不顺便绕到天津来看我一下啊？
