--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,20 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-05-01  艺术对抗暴行
+故事：毕加索，画作《格尔尼卡》
+毕加索把一肚子的怒火宣泄在画纸上。本来他就接受西班牙政府的委托，要创作一幅巨画，准备在巴黎世界博览会的西班牙馆展示。
+这时他决定改变主题，用格尔尼卡事件为题目来创作，通过艺术来控诉德军的暴行。
+
+他用了六周的时间，于6月4日完成了高七点七米、宽三点五米的巨画《格尔尼卡》。
+这幅画只用黑白两色，中央是一匹重伤将死的马，臀部刺着一根斗牛的长矛，马头仰天，痛苦嚎叫；
+四周有赤裸惊恐的女人，支离破碎的尸体，高举双手、绝望呼救的妇人，抱着孩子、悲痛狂吼的母亲，让观者仿佛身在熊熊烈火的战争地狱。
+
+
+## 2017-04-29  不容青史尽成灰
+故事：斧头帮主 —— 王亚樵
+
+
 ## 2017-04-26  微小失误，巨大浩劫
 故事：切尔诺贝利
 在哪里跌倒，就在哪里站起来？不对，在哪里跌倒，你要换个地方站起来，否则你会跌倒两次。
