--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,29 @@
 --------------------------------------------------------------------------------
 
 
+
+## 2017-05-04  用别人预测自己
+在决策科学中有一个很重要的概念，叫做 基础比率（base rate）。
+所谓基础比率，就是以前的人，做同样的事，做到的平均水平。而且卡尼曼知道，预测未来最好的参考指标，就是基础比率。
+
+所以基础比率是一个非常强大的预测工具。说白了就是你并不比别人强多少。
+如果别人做这件事需要那么长时间，基本上你也需要那么长时间。
+如果别人做这件事失败了，那么你做这件事最有可能出现的结局也是失败。
+你认为你了不起，其实别人在做这件事之前也认为自己了不起。你并不特殊。
+
+
+## 2017-05-01  成大事者怎么才能不纠结
+希斯兄弟介绍了一个特别好的旁观技术，叫“ 10/10/10法则 ”。这个方法要求你从三个时间尺度去考虑一个问题：
+10分钟之后，你会对这个决定作何感想？
+10个月之后，你会作何感想？
+10年之后，你又会作何感想？
+
+
+## 2017-04-29  复制是“形似”，借鉴是“神似”
+毕加索也有句名言：Good artists copy. Great artists steal.
+建筑师朱海峰把它翻译成“能工摹其形，巧匠摄其魂”
+
+
 ## 2017-04-25  到底什么是厉害的决策法
 决策，是面对不容易判断优劣的几个选项，做出正确的选择。说白了，决策就是拿个主意。决策是一个非常纠结的心理过程。
 
