--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,28 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-05-01  起步时，最重要的是什么？
+最少必要知识
+我甚至专门为它杜撰了一个英文缩写：
+MAKE : Minimal Actionable  Knowledge and Experience
+
+我还专门写过一本书《人人都能用英语》，掌握一门外语的最少必要知识都有哪些呢？
+  1. 认识字母
+  2. 认识音标
+  3. 会查词典
+  4. 懂基本语法
+  5. 会查语法书
+  6. 会用 Google 搜索引擎
+
+那么，设计的“最少必要知识”是什么呢？其实，只需要记住两个词就可以了：
+  - 简洁
+  - 留白
+
+学习能力也好、执行力也罢，最终的核心只有一个：
+刚开始的时候，平静地接受自己的笨拙。
+看一个人执行力强不强，就看他在做得不足够好的时候是否持续地做……
+所谓的心态，其实不过是大脑正常运转的状态。大脑不能正常运转了，会有什么好事儿自动发生呢？能发生的全是灾难。
+
 
 ## 2017-04-24  如何提高自己的智商？
 操作系统跑起来，底层是概念与连接，上层运转的主要是什么呢？两样东西：
