Adds reading notes.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -7,6 +7,39 @@
 
 # 个人篇
 
+## 2017-05-09  大胆质疑，谨慎断言
+`
+2015年我去非洲，参观了马赛人的部落。马赛是一个一夫多妻制的族群，这里的男人，可以娶上百个老婆。父亲死了，除了亲妈之外，长子甚至可以继承父亲所有老婆。于是很多人半开玩笑地说：我也要做马赛人。
+
+但是，这件事有没有特殊背景和具体情况呢？
+
+我研究了一下发现，马赛男人有个特殊的“成人礼”仪式：独自杀死一头狮子。你可以想象，大部分马赛男人都被狮子吃了。侥幸活下来的，可用三头牛换个老婆，无限开支散叶。这就是特殊背景，和具体情况。
+
+我掂量了掂量自己的能力，觉得：嗯，一夫一妻制挺好的。
+`
+
+其实，我们并不比我们的父母对谣言更有免疫力，只是他们更相信健康的谣言，我们更相信致富的谣言。
+
+批判性思维指的是“熟练地和公正地评价证据的质量，检测错误，虚假，篡改，伪装和偏见的能力”。它能帮我们尽可能地获得最准确的认知，接近真相。
+
+具体怎么做？第一，发现和质疑基础假设；第二、检查事实的准确性和逻辑一致性；第三，关注特殊背景和具体情况；第四、寻找其他可能性。
+
+
+## 2017-05-07  从对抗性思考，到平行思考
+世界创新思维、概念思维领域的专家爱德华·德·波诺说，每个人都有六顶不同颜色的，代表不同思维方式的帽子，它们是：
+
+  - 代表“信息”的白帽，充分搜集数据、信息和所有需要了解的情况；
+  - 代表“价值”的黄帽，集中发现价值、好处和利益；
+  - 代表“感觉”的红帽，让团队成员释放情绪和互相了解感受；
+  - 代表“创造”的绿帽，专注于想点子，寻找解决办法；
+  - 代表“困难”的黑帽，只专注缺陷，找到问题所在；
+  - 代表“管理思维过程”的蓝帽，安排思考顺序，分配思考时间。
+
+六顶思考帽的戴法顺序，无穷无尽，但有几个基本建议：白帽先行，黄在黑前，黑后有绿。
+第一、白帽先行。通常，我们应该从获取信息开始，这会使得其他的思考帽，有讨论的坚实基础。
+第二、黄在黑前。先思考价值，再思考困难，有助于我们产生正向的动机，获得正能量。
+第三、黑后有绿。黑帽让我们看到问题、困难、风险，但黑后有绿，鼓励思考者探索黑帽是否有解决方案。
+
 ## 2017-05-04  如何用20小时，快速学习
 第一，花5小时，大量泛读；第二，花3小时，建立模型；第三，花2小时，请教专家；第四，花10小时，理解复述。
 
