--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,12 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-05-09  职业员工和管理者要注意的两件事
+一个有效的管理者，如果做到了第5级（基层员工是第1级），他需要了解第3级的工作，做到了第6级，就需要了解第4级的工作。
+
+一件事情的重要性如果是10，可能不算太差，但是被吹成了100，又被发现只有10，大家对它的评价可能只剩1了。
+
+
 ## 2017-04-26  为什么要读《红楼梦》：读经典的重要性
 每一个被尊敬的民族都有他史诗般的作品，了解这个民族就要读他们的史诗。
 古希腊有《荷马史诗》，意大利有《神曲》，英国有莎士比亚的名剧，德国有《浮士德》，
