--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,15 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-05-06  这一次的输赢和这一生的输赢
+举个例子，赌钱游戏。咱俩赌硬币正反面，如果是正面，我输给你150万元，如果是反面，你输给我100万元 —— 这个游戏你赌还是不赌呢？概率论告诉你应该赌，因为数学期望是正的25万元。但你可能不会赌，因为一旦输了，这个损失不好承受。
+
+然后咱们换个玩法。正面，我输给你150元；反面，你输给我100元，而且咱们连玩1万次。那这回你当然要赌！数学期望还是25万元，但这一次你基本上一定会拿到差不多这么多钱。
+
+真实生活，更像是第二种玩法。每一次都面临输的可能性，但是只要你坚持正确的选择，而且能承受小失败，那么从长期看来必定是赢。
+
+所以答案就是想想长期。你在乎的不是这一次的输赢，而是这一生的输赢。你要的不是一次赌对，而是一个能够多次赌对的系统。
+
 
 ## 2017-05-04  用别人预测自己
 在决策科学中有一个很重要的概念，叫做 基础比率（base rate）。
