--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,11 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-05-08  你生命中最重要的东西是什么？
+最重要的时：希望。
+所谓的希望，就是一个人相信自己的明天会因为今天的努力而变得更好…… ” 这里的重点是，明天不会自动变得更好的，明天之所以能变得更好，是因为今天的行动，是因为今天用正确的方式做了正确的事情。
+
+
 ## 2017-05-01  起步时，最重要的是什么？
 最少必要知识
 我甚至专门为它杜撰了一个英文缩写：
