--- a/note/...book_唐诗.md
+++ b/note/...book_唐诗.md
@@ -21,8 +21,22 @@
 乱花渐欲迷人眼，浅草才能没马蹄。最爱湖东行不足，绿杨阴里白沙堤。
     -- 《湖上春行》
 
+乱花渐欲迷人眼，浅草才能没马蹄。               
+    --《钱塘湖春行》
+
+## 李商隐
+洞庭波冷晓侵云，日日征帆送远人。
+几度木兰舟上望，不知元是此花身。
+    --《木兰花》
+
 
 ## 其他
+洞房昨夜停红烛，待晓堂前拜舅姑。妆罢低声问夫婿，画眉深浅入时无。
+    -- 朱庆馀《闺意》
+
+越女新妆出镜心，自知明艳更沉吟。 齐纨未足时人贵，一曲菱歌敌万金。
+    -- 张籍《酬朱庆馀》
+
 山中夜度空江水，汀月寒生古石楼。
     -- 贾岛《早秋寄题天竺灵隐寺》
 
@@ -69,9 +83,6 @@
 
 千山鸟飞绝，万径人踪灭。孤舟蓑笠翁，独钓寒江雪。  
     -- 柳宗元《江雪》
-
-乱花渐欲迷人眼，浅草才能没马蹄。               
-    -- 白居易《钱塘湖春行》
 
 落霞与孤鹜齐飞，秋水共长天一色。
 嗟乎！时运不齐，命途多舛。冯唐易老，李广难封。
