Adds reading notes.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -2,10 +2,27 @@
 2016-10-14
 
 
+1、商业，我们与外部的关系；
+2、管理，我们与内部的关系；
+3、个人，我们与自己的关系；
+4、工具，提升前三者的效率。
+
+
 --------------------------------------------------------------------------------
 
 
 # 个人篇
+
+## 2017-05-18  一眼识别诡辩的五个方法
+概念：三段论
+什么是三段论？简单来说，这是一种，“大前提，小前提，结论”式的推理，其基本逻辑是：如果一类对象的全部都是什么，那么，它的部分也必然是什么；如果一类对象的全部都不是什么，那么，它的部分也必然不是什么。
+比如著名的“苏格拉底三段论”：
+大前提：所有的人都是要死的；小前提：苏格拉底是人；结论：所以苏格拉底是要死的。
+
+
+## 2017-05-10  冻死在那个不存在的冬天
+在商业环境变化不快的时候，思维容易懒惰，在一些人的脑海中，复杂、多维的“系统论”，会退化为简单、单向的“因果论”：你只要做好这个，就可以得到那个。甚至在一些人的脑海中，“因果论”会进一步退化为“经验论”：人家就是这么做的，成功了，我也要这么做。再甚至，对一些连思考都不思考的人，“经验论”会继续退化为“乱拳论”，我什么都不信，我只相信我通过尝试、犯错得来的教训，乱拳打死师傅。
+
 
 ## 2017-05-09  大胆质疑，谨慎断言
 `
