--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,16 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-05-18  创新的自由
+施密特认为“混乱”是谷歌一项重要的特色，你必须保持混乱的特质，才能真正发现下一步该做的事。
+
+
+
+## 2017-05-11  一个约定，两部巨作
+真理要一个人说，一个人听；信仰要一个人鼓动，一个人行动。于是，两人约定启动一个竞赛，各自去写一部神话式的奇幻文学，来比比看谁写得好。
+年纪轻的叫刘易斯，他写出《纳尼亚传奇》，共七部。年纪大的叫托尔金，他写出《魔戒》三部曲。
+
+
 ## 2017-05-09  变调的节日
 故事：母亲节
 1914年5月9日，总统威尔逊正式宣告：每年5月的第二个星期天为国定的“母亲日”，这就是现在母亲节的由来。
