--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,20 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-05-17  用进化论修心养性
+道德演变  
+而且道德也在不断演变之中。里德利举了个例子。一百年前，“恋童” —— 比如谁娶了一个未成年的小女孩，社会是可以接受的，但是同性恋不行。而今天，社会能接受同性恋，但是绝对不能恋童。那你说哪个道德标准对？其实没有什么绝对的对错，只是一个道德在现阶段演变到什么程度的问题。
+
+
+## 2017-05-09  哈佛商学院是个特殊生意
+商学院，到底是个什么地方呢？
+是个学本领的地方？这是天真的说法。
+是个拿文凭毕业以后好找工作的地方？这是草根的说法。
+是个混圈子的地方？这才是精英的说法。
+
+面向企业家的短期培训班。备忘录说的很实在，企业家们从这些培训班里获得两个好处 —— 一个是让头脑获得一点“适当的刺激”，一个是……从此可以自称是哈佛校友了。
+
+
 ## 2017-05-06  这一次的输赢和这一生的输赢
 举个例子，赌钱游戏。咱俩赌硬币正反面，如果是正面，我输给你150万元，如果是反面，你输给我100万元 —— 这个游戏你赌还是不赌呢？概率论告诉你应该赌，因为数学期望是正的25万元。但你可能不会赌，因为一旦输了，这个损失不好承受。
 
