--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,16 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-05-15  成为配得上希望的那个人
+你进步了，就意味着说其他的人相对退步了…
+拿尚未发生的事情说事儿讲理尽管不一定错，但通常不会被正确理解；
+乐观并不是天生的，乐观是一种选择，是一种能力，一种相信明天会更好的选择与能力。
+
+很多情况下，原本辅助我们行动的工具和方法，在我们不经意间已经变成了做事的目的。
+心理学上有过相关的研究，“忍住不说”要比“公之于众”更能促进目标的达成。
+因为促使人们完成目标的动力之一，就是成功后的喜悦。而如果提前把这种喜悦说出来，大脑会误以为任务已经完成，并且产生兴奋的感觉，而这对于达成目标的动力来说，其实是有稀释作用的。
+
+
 ## 2017-05-08  你生命中最重要的东西是什么？
 最重要的时：希望。
 所谓的希望，就是一个人相信自己的明天会因为今天的努力而变得更好…… ” 这里的重点是，明天不会自动变得更好的，明天之所以能变得更好，是因为今天的行动，是因为今天用正确的方式做了正确的事情。
