Adds reading notes.

--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -13,6 +13,12 @@
 
 # 个人篇
 
+
+## 2017-05-22  自己先开价，还是让对方先开价
+定位调整偏见，是一种谈判技巧。利用先入为主的定位效应，把价格谈判、或者条件谈判，直接锚定在对方的底线附近，然后拉锯，它是一种在信息不对称、利益不一致的谈判中，争取自己最大利益的方法。
+具体有三个步骤：第一，争取先开价；第二，越极端越好；第三，留还价余地。
+
+
 ## 2017-05-18  一眼识别诡辩的五个方法
 概念：三段论
 什么是三段论？简单来说，这是一种，“大前提，小前提，结论”式的推理，其基本逻辑是：如果一类对象的全部都是什么，那么，它的部分也必然是什么；如果一类对象的全部都不是什么，那么，它的部分也必然不是什么。
