--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,9 +5,14 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-05-19  游戏的力量
+眼见为真，是真理吗？ 
+人脑很奇特也很奇怪，脑相信的，眼睛就会看见；眼睛看见的，脑却不相信。 
+你给一个人一杯红酒，跟他说这红酒一瓶要两万，他喝一口就能看见法国波尔多的葡萄园在艳阳下发光。 同样的酒你跟他说只值四百，他立刻能讲出这酒的一百个问题。 根据脑部的扫描，两万跟四百会反射在他脑部不同位置，他没有说谎，人的脑袋就是这样运作，所以你再问他：“你爱不爱你太太？ ”，他回答：“爱！ ”这时看他脑部反射发光的部位是在两万区，还是在四百区？ 就知道他是不是真心。 
+
+
 ## 2017-05-18  创新的自由
 施密特认为“混乱”是谷歌一项重要的特色，你必须保持混乱的特质，才能真正发现下一步该做的事。
-
 
 
 ## 2017-05-11  一个约定，两部巨作
