--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,17 +5,25 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-05-21  我的陪审员经历
+既然陪审员不懂法，那么为什么美国要让这样一群人来裁判重大官司呢？（小案子通常不需要陪审团）原因是社会希望大家以常识定罪。
+
+
+## 2017-05-19  阅读的意义
+阅读不仅仅是为了让我们在冷酷无情的科技时代获得喘息，让我们重启大脑深入思考的功能，也是抵抗狭隘、思想控制和舆论支配的方式。
+伊朗裔的畅销书作家纳菲西女士，她在《在德黑兰读<洛丽塔>》（ Reading Lolita in Tehran )一书中写道，所有传世的文学作品，无论呈现的现实多严酷，都有一股借着肯定生命来对抗生命无常的基本反抗精神。
+牛津大学圣埃德蒙（13世纪的坎特伯雷大主教）的一句话，“Study as if you were to live forever, live as if you were to die tomorrow.”
+
+
 ## 2017-05-09  职业员工和管理者要注意的两件事
 一个有效的管理者，如果做到了第5级（基层员工是第1级），他需要了解第3级的工作，做到了第6级，就需要了解第4级的工作。
-
 一件事情的重要性如果是10，可能不算太差，但是被吹成了100，又被发现只有10，大家对它的评价可能只剩1了。
 
 
 ## 2017-04-26  为什么要读《红楼梦》：读经典的重要性
 每一个被尊敬的民族都有他史诗般的作品，了解这个民族就要读他们的史诗。
 古希腊有《荷马史诗》，意大利有《神曲》，英国有莎士比亚的名剧，德国有《浮士德》，
-俄罗斯有《战争与和平》、《静静的顿河》，日本有《源氏物语》，法国有《红与黑》，有《约翰·克利斯朵夫》等等。
-而我们中国则有《红楼梦》。
+俄罗斯有《战争与和平》、《静静的顿河》，日本有《源氏物语》，法国有《红与黑》，有《约翰·克利斯朵夫》等等。而我们中国则有《红楼梦》。
 
 
 ## 2017-04-25  为什么要读《红楼梦》：中国依然是一个大贾府
