--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,24 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-05-22  向十万读者致敬
+我理解的「精英」，就是能从智识思辨中找到乐趣的人，就是对未知无限好奇的人，就是面对不确定性随时可以迭代自己的人，就是要求自己和最新认知保持同步、从不放弃学习、永远高看自己一眼的人。
+
+
+## 2017-05-19  样板式妥协
+那现在的局面就是科学提供对世界的精准描述，提供世界的使用说明书，而宗教提供世界的意义，和对人的慰藉。时至今日，绝大多数所谓教徒，根本谈不上什么信不信的问题，他们参加宗教活动仅仅是作为一个社会习俗。
+
+
+## 2017-05-18  低收入者重视集体，高收入者强调个人
+高收入者之所以不爱为了爱心捐款，也许不是因为他们特别自私和小气。研究者说，这可能是因为高收入者的思维模式跟低收入者不一样 —— 低收入者更愿意依靠集体的力量，更愿意互相依赖；高收入者更愿意自足，靠自己解决问题。
+
+人们幻想高水平的人也是靠今天我帮你一个忙明年你帮我一个忙这种“人情账”的逻辑办事。这个逻辑在现代根本不存在。现代社会是陌生人之间能够合作、能够迅速建立互信的社会。如果这件事对咱俩都有利，那咱们根本不需要积累什么人脉关系，以前不认识现在可以认识。如果这件事对我有利对你不利，那我怎么忍心让你做呢？
+
+什么人脉，什么人情账户，其实是没有明确权益的账，不但不利于良好合作，还污染了真诚的友情。表面上温情脉脉，背后却是可耻的算计。这大概就是为什么现代社会的人们越来越反感这些所谓的人情往来。想明白这些，高收入者的独立精神，可能就是更健康的人际关系。要么就是真诚的友谊，要么就是公平的合作，实在不行干脆就是赤裸裸的交易，搞什么人脉。
+
+作者举了一个例子，比如说搬家。如果你是一个低收入者，你搬家肯定得请亲朋好友过来帮忙。这意味着，下次朋友搬家的时候，你也得去帮忙。这也就意味着，你为了将来有人来帮你，就算现在还没有搬家需求，看见别人需要搬家的时候，你也应该去帮忙。当然，我们也可以说朋友之间本来就要互相帮助，哪有那么多算计？但是也许，或者说至少对某些人来说，也许这是一种理性行为，是为了未来依靠别人做一个人情储备。但如果你是个高收入者的话，那你就完全可以用钱来解决搬家问题。想搬家，直接请一个专业搬家公司就解决了。你平时就没必要处心积虑地积累什么“搬家的人脉资源”。
+
+
 ## 2017-05-17  用进化论修心养性
 道德演变  
 而且道德也在不断演变之中。里德利举了个例子。一百年前，“恋童” —— 比如谁娶了一个未成年的小女孩，社会是可以接受的，但是同性恋不行。而今天，社会能接受同性恋，但是绝对不能恋童。那你说哪个道德标准对？其实没有什么绝对的对错，只是一个道德在现阶段演变到什么程度的问题。
