--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,17 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-05-22  认知升级最重要的工具是什么？
+能够真正用来变现的，事实上是“认知差异”：
+
+  - 面对同样的信息、知识、现象、事实、数据等等，
+  - 人们不仅对它们的认知不同，比如，有少数正确的，有大多数不正确的 —— 这里有差异；
+  - 而且，即便是在认知正确的群体中，还有认知高度、认知深度的不同 —— 这里还有差异。
+
+也许你好奇了：不断升级的最重要工具是什么呢？还真的有个答案：行动中的思考。
+没有践行，就没有可变现的东西；没有行动中的思考，就没有真正有价值的认知升级。没有认知升级，就没有认知差异；没有足够的认知差异，就根本不可能白手起家。
+
+
 ## 2017-05-15  成为配得上希望的那个人
 你进步了，就意味着说其他的人相对退步了…
 拿尚未发生的事情说事儿讲理尽管不一定错，但通常不会被正确理解；
