--- a/note/...book_唐诗.md
+++ b/note/...book_唐诗.md
@@ -29,6 +29,10 @@
 几度木兰舟上望，不知元是此花身。
     --《木兰花》
 
+人生何处不离群？世路干戈惜暂分。雪岭未归天外使，松州犹驻殿前军。
+座中醉客延醒客，江上晴云杂雨云。美酒成都勘送老，当垆仍是卓文君。
+    --《杜工部蜀中离席》
+
 
 ## 其他
 洞房昨夜停红烛，待晓堂前拜舅姑。妆罢低声问夫婿，画眉深浅入时无。
