Adds reading notes.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -6,7 +6,21 @@
 Information without emotion isn't retained.
     -- Tony Robbins
 
+
 ## Part 1: Healthy
 When I let go of what I am, I become what I might be.
 (是以圣人之能成其大也)，以其终不自为大，故能成其大。
     -- Lao Tzu 老子《道德经》
+
+
+## Part 2: Wealthy
+### Marc Andreessen
+__Strong Views, Loosely Held__  
+Most people go through life and never develop strong views on things.
+What happens when the world changes? What happens when something else happens? That's where "loosely held" comes in.
+
+The key to success is, "Be so good they can't ignore you."
+
+Warren Buffett, he's betting against change. We're betting for change. When he makes a mistake, it's because something changes that he didn't expect. When we make a mistake, it's because something doesn't change that we thought would.
+
+To do original work: It's not necessary to know something nobody else knows. It is necessary to believe something few other people believe.
