Adds reading notes.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -24,3 +24,7 @@ The key to success is, "Be so good they can't ignore you."
 Warren Buffett, he's betting against change. We're betting for change. When he makes a mistake, it's because something changes that he didn't expect. When we make a mistake, it's because something doesn't change that we thought would.
 
 To do original work: It's not necessary to know something nobody else knows. It is necessary to believe something few other people believe.
+
+
+### Arnold Schwarzenegger
+I am a big believer that if you have a very clear vision of where you want to go, then the rest of it is much easier.
