Adds reading notes.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -25,6 +25,8 @@ Warren Buffett, he's betting against change. We're betting for change. When he m
 
 To do original work: It's not necessary to know something nobody else knows. It is necessary to believe something few other people believe.
 
-
 ### Arnold Schwarzenegger
 I am a big believer that if you have a very clear vision of where you want to go, then the rest of it is much easier.
+
+### Derek Sivers
+Because most of us say yes to too much stuff, and then, we let these little, mediocre things fill our lives... The problem is, when that occasional, 'Oh my God, hell yeah!' things comes along, you don't have enough time to give it the attention that you should, because you've said yes to too much other little, half-ass stuff, right?
