Adds reading notes.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -30,3 +30,14 @@ I am a big believer that if you have a very clear vision of where you want to go
 
 ### Derek Sivers
 Because most of us say yes to too much stuff, and then, we let these little, mediocre things fill our lives... The problem is, when that occasional, 'Oh my God, hell yeah!' things comes along, you don't have enough time to give it the attention that you should, because you've said yes to too much other little, half-ass stuff, right?
+
+### Tony Robbins
+Stressed is the archiever word for fear.
+
+__The Best Investment He's ever made?__  
+Warren Buffett told him, "In vesting in yourself is the most important investment you'll ever make in your life... There's no financial investment that'll ever match it, because if you develop more skill, more ability, more insight, more capacity, that's what's going to really provide economic freedom..."
+
+Jim Rohn famously said, "If you let your learning lead to knowledge, you become a fool. If you let your learning lead to action, you become wealthy."
+
+__Quality Questions Create a Quality Life__  
+The quality of your life is the quality of your questions. Questions determine your focus.
