Adds reading notes.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -31,6 +31,13 @@ I am a big believer that if you have a very clear vision of where you want to go
 ### Derek Sivers
 Because most of us say yes to too much stuff, and then, we let these little, mediocre things fill our lives... The problem is, when that occasional, 'Oh my God, hell yeah!' things comes along, you don't have enough time to give it the attention that you should, because you've said yes to too much other little, half-ass stuff, right?
 
+### Matt Mullenweg
+It turns out that I graduated from high school, I had already used 93% of my in-person parent time. I'm now enjoying the last 5% of that time. We're in the tail end.
+    -- Tim Urban _The Tail End_
+
+You asked about what we look for in candidates: clarity of writing. I think clarity of writing indicates clarity of thinking.
+故事：邮件交互面试
+
 ### Tony Robbins
 Stressed is the archiever word for fear.
 
