Adds reading notes.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -28,6 +28,9 @@ To do original work: It's not necessary to know something nobody else knows. It 
 ### Arnold Schwarzenegger
 I am a big believer that if you have a very clear vision of where you want to go, then the rest of it is much easier.
 
+__Never Audition - Own or Create a Unique Niche__
+How can I carve myself out a niche that only I have?
+
 ### Derek Sivers
 Because most of us say yes to too much stuff, and then, we let these little, mediocre things fill our lives... The problem is, when that occasional, 'Oh my God, hell yeah!' things comes along, you don't have enough time to give it the attention that you should, because you've said yes to too much other little, half-ass stuff, right?
 
@@ -48,3 +51,7 @@ Jim Rohn famously said, "If you let your learning lead to knowledge, you become 
 
 __Quality Questions Create a Quality Life__  
 The quality of your life is the quality of your questions. Questions determine your focus.
+
+## Casey Neistat
+If you would not be forgotten as soon as you are dead and rotten, either write things worth reading, or do things worth writing.
+    -- Ben Franklin
