Adds reading notes.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -30,6 +30,7 @@ I am a big believer that if you have a very clear vision of where you want to go
 
 __Never Audition - Own or Create a Unique Niche__
 How can I carve myself out a niche that only I have?
+> 故事：为自己创造独一无二的位置
 
 ### Derek Sivers
 Because most of us say yes to too much stuff, and then, we let these little, mediocre things fill our lives... The problem is, when that occasional, 'Oh my God, hell yeah!' things comes along, you don't have enough time to give it the attention that you should, because you've said yes to too much other little, half-ass stuff, right?
@@ -39,10 +40,10 @@ It turns out that I graduated from high school, I had already used 93% of my in-
     -- Tim Urban _The Tail End_
 
 You asked about what we look for in candidates: clarity of writing. I think clarity of writing indicates clarity of thinking.
-故事：邮件交互面试
+> 故事：邮件交互面试
 
 ### Tony Robbins
-Stressed is the archiever word for fear.
+Stressed is the achiever word for fear.
 
 __The Best Investment He's ever made?__  
 Warren Buffett told him, "In vesting in yourself is the most important investment you'll ever make in your life... There's no financial investment that'll ever match it, because if you develop more skill, more ability, more insight, more capacity, that's what's going to really provide economic freedom..."
@@ -55,3 +56,9 @@ The quality of your life is the quality of your questions. Questions determine y
 ## Casey Neistat
 If you would not be forgotten as soon as you are dead and rotten, either write things worth reading, or do things worth writing.
     -- Ben Franklin
+
+## Reid Hoffman
+The limits of my language mean the limits of my world.
+    -- Ludwig Wittgenstein
+
+If they don't just accept the strategy you hand them, they should suggest modifications to the plan based on their closeness to the details.
