--- a/note/...column_5分钟商学院.md
+++ b/note/...column_5分钟商学院.md
@@ -14,6 +14,45 @@
 # 个人篇
 
 
+## 2017-06-02  你的情感账户余额不足，请充值
+什么是情感账户？情感账户，是人际关系的一种比喻，这个账户里存的是信任，价值，情感。
+情商中所谓的“人际关系处理”，本质上就是在情感账户里存款和取款的行为。
+
+
+## 2017-05-31  真正优秀的人，都自带鸡血
+情商，其实不仅仅是“左右逢源、八面玲珑”的处世技巧，情商更重要的是：认识自己，控制自己，激励自己。
+
+
+## 2017-05-30  自律，才是最大的自由
+文艺复兴时期法国作家蒙田曾说过：真正的自由，是在所有时候都能控制自己
+
+`
+美国船王哈利在把事业传给儿子小哈利时，带他去了一趟赌场。老哈利给了小哈利2000美元，说：要留下500。
+小哈利答应了。但是，年轻的小哈利很快赌红了眼。在“反败为胜”强烈的欲望诱惑下，把钱输得精光。
+小哈利打工挣了700美元，再上赌桌，决定留一半，但又输光了所有。
+小哈利非常沮丧。老哈利说：“你以为进赌场为了赢谁？是要赢你自己！控制住自己，你才是真正的赢家。”
+终于有一次，小哈利在输到一半时，坚定地站起来，输了钱的他，带着赢家的心情离开赌桌。最终，小哈利能不被输、也不被赢诱惑，始终在输赢10%之内，坚决离场。老哈利终于放心地把公司交给小哈利，告诉他：能在赢时退场的人，才是真正的赢家。
+`
+
+
+## 2017-05-29  不偏不倚的自我认知
+乔韩窗口理论认为，每个人的自我，根据我自己知不知道，别人知不知道，可以分为四个部分：
+  - 盲目的自我
+  - 秘密的自我
+  - 公开的自我
+  - 未知的自我
+
+
+## 2017-05-28  同理心，千般能力的共同心法
+什么是智商？
+智商通常是指观察力、记忆力、想象力、创造力、分析判断能力、思维能力、应变能力、推理能力等等。我用一句话来总结：智商，就是你理解规律、运用规律的能力。
+把智商持之以恒地用在与人打交道上，你就拥有了所谓的“情商”，成为情感专家。
+情商，和智商并不对立。相反，情商，是智商的一个结果。但同时决定这个“结果”的，还有持之以恒地“训练”。也就是说：智商 x 情感训练 = 情商。
+智商的高低，决定了情商的天花板。但是很多人在情感训练上的努力程度之低，根本还轮不到拼智商。
+高超的演讲，最重要的不是你在讲，而是在帮助他去听。
+情商有五个基础的元能力：同理心、自我认知、自我控制、自我激励、人际关系处理。
+
+
 ## 2017-05-22  自己先开价，还是让对方先开价
 定位调整偏见，是一种谈判技巧。利用先入为主的定位效应，把价格谈判、或者条件谈判，直接锚定在对方的底线附近，然后拉锯，它是一种在信息不对称、利益不一致的谈判中，争取自己最大利益的方法。
 具体有三个步骤：第一，争取先开价；第二，越极端越好；第三，留还价余地。
