--- a/note/...column_今天.md
+++ b/note/...column_今天.md
@@ -5,6 +5,13 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-05-26  吉尼斯献血爷爷
+不要害怕伟大，有些人生来伟大，有些人成就伟大，还有些人不得不伟大！
+莎士比亚这段名言，正是献血爷爷哈里森的最佳写照。
+
+七十八岁的詹姆斯·哈里森到这天献血达一千次，成为吉尼斯世界纪录上献血次数最多的人。真正厉害的不是他献血多，而是他的血救过两百多万人，个个都是新出生的宝宝。相信这更是一个世界纪录。
+
+
 ## 2017-05-19  游戏的力量
 眼见为真，是真理吗？ 
 人脑很奇特也很奇怪，脑相信的，眼睛就会看见；眼睛看见的，脑却不相信。 
@@ -23,6 +30,7 @@
 ## 2017-05-09  变调的节日
 故事：母亲节
 1914年5月9日，总统威尔逊正式宣告：每年5月的第二个星期天为国定的“母亲日”，这就是现在母亲节的由来。
+
 
 ## 2017-05-01  艺术对抗暴行
 故事：毕加索，画作《格尔尼卡》
