--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,29 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-05-29  为什么中国不会掉入中等收入陷阱
+中等收入陷阱：是指当一个国家人均GDP达到1万美元左右时，它的发展陷入长期停滞，债务增加，社会出现严重动荡。而具有代表性的国家大多在拉美，因此有时又称之为“拉美国家中等收入陷阱”。
+世界上几乎所有国家的财政都是赤字，而解决赤字的方法只有两个，一个是印钞票，一个是发行国债。中国采用了前一种，美国采用了后一种。不论采用哪一种，最后都要有人买单。
+印钞票的结果是，今天所有的国民都在替它买单，而发债券则是由子孙后代买单。到目前为止，中国超发的人民币大多数又给埋在了地下 —— 用于购买房地产了，并没有进入流通领域，因此你只能感受到个位数的通货膨胀。
+
+
+## 2017-05-27  雪莱和叶芝的诗
+我最喜欢的外国诗人是 Tagore，其中他的诗集《吉檀迦利》里有段文字我觉得很美：“Eyes are raining for her, heart is holding umbrella for her, this is love.”眼睛为她下雨，心却为她打伞，这就是爱情。
+
+
+## 2017-05-23  专利保护什么
+很容易想到可以手写输入汉字，你不能申请一种专利，说“我想到了可以用触屏手写汉字这个点子”，这个点子本身是不受专利保护的。但是，如果你想到了一个过程，让这种想法采用你的过程得到实现，那么你的这种实现方法是可以受到专利保护的。
+在IT领域，一个新的算法是无法申请专利的，但是通过某一种特殊方式，实现这种算法的过程，可以申请专利。
+
+`
+由于专利只保护过程，因此高通会把所有可能的实现过程都保护起来。它最著名的专利保护案例就是3G无线通信标准CDMA的专利。CDMA是一种通信的方法，它本身的专利到了移动通信时代早就过期了，理论上讲谁都可以用。
+中国当时不想向高通交专利费，于是设计出一种绕过高通专利的实现过程TD－SCDMA。但是，在实现时才发现，这个路要绕得如此远，以至于3G时代都过去了，中国的TD－SCDMA还没有普及。因此，一个公司如果真的想用专利保护自己，就需要把可能的过程都想到，都保护起来。
+`
+
+专利保护人造的东西，不保护天然的东西，即使之前没有人发现它，而你发现了。
+专利可以保护具体的东西、流程和人造物，不能保护抽象的概念、想法或者点子，以及自然界已经有的东西。
+
+
 ## 2017-05-21  我的陪审员经历
 既然陪审员不懂法，那么为什么美国要让这样一群人来裁判重大官司呢？（小案子通常不需要陪审团）原因是社会希望大家以常识定罪。
 
