--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,25 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-05-29  《人人说谎》解读4：“政治正确” 是虚伪的吗？
+想一套，做一套，说一套，现代世界就是这样。
+消除人们心里的偏见是几乎不可能的，那么虽然消除不了，但是社会习俗约定，凡是上不了台面的想法都不能公开说，则完全可行。这就是政治正确。
+
+政治正确（Political Correctness），是在近代思想及政策研究中的专业名词，广义指在言论、行为上，不顾客观事实，迎合主流价值观、道德和舆论导向。也可以指那些无视事实，站在道德制高点上全力支持主流价值观的人。
+
+
+## 2017-05-25  斯多葛派哲学的安心之法
+你听这句话是不是感觉有点熟悉呢？基督教里有个类似的说法。美国基督教神学家尼布尔，曾在19世纪30年代写过一段《宁静祷文》（以下是维基百科收录的洪宋弦的译文）：
+神啊，
+请赐与我宁静，好让我能接受，我无法改变的事情；
+请赐与我勇气，好让我能改变，我能去改变的事情；
+请赐与我睿智，好让我能区别，以上这两者的不同。
+
+
+## 2017-05-24  《人人说谎》解读2：为什么非得是 “大” 数据
+赛斯也举了个例子。一个烧红的炉子，你只要触碰一下就知道这东西危险不能碰；可是要想知道喝咖啡能不能导致头痛，你大概要喝上几千杯才能看出效果来。如此说来，明显的效应只要小数据就够了，不明显的效应才需要大数据。
+
+
 ## 2017-05-22  向十万读者致敬
 我理解的「精英」，就是能从智识思辨中找到乐趣的人，就是对未知无限好奇的人，就是面对不确定性随时可以迭代自己的人，就是要求自己和最新认知保持同步、从不放弃学习、永远高看自己一眼的人。
 
@@ -38,11 +57,7 @@
 
 
 ## 2017-05-06  这一次的输赢和这一生的输赢
-举个例子，赌钱游戏。咱俩赌硬币正反面，如果是正面，我输给你150万元，如果是反面，你输给我100万元 —— 这个游戏你赌还是不赌呢？概率论告诉你应该赌，因为数学期望是正的25万元。但你可能不会赌，因为一旦输了，这个损失不好承受。
-
-然后咱们换个玩法。正面，我输给你150元；反面，你输给我100元，而且咱们连玩1万次。那这回你当然要赌！数学期望还是25万元，但这一次你基本上一定会拿到差不多这么多钱。
-
-真实生活，更像是第二种玩法。每一次都面临输的可能性，但是只要你坚持正确的选择，而且能承受小失败，那么从长期看来必定是赢。
+举个例子，赌钱游戏。咱俩赌硬币正反面，如果是正面，我输给你150万元，如果是反面，你输给我100万元 —— 这个游戏你赌还是不赌呢？概率论告诉你应该赌，因为数学期望是正的25万元。但你可能不会赌，因为一旦输了，这个损失不好承受。然后咱们换个玩法。正面，我输给你150元；反面，你输给我100元，而且咱们连玩1万次。那这回你当然要赌！数学期望还是25万元，但这一次你基本上一定会拿到差不多这么多钱。真实生活，更像是第二种玩法。每一次都面临输的可能性，但是只要你坚持正确的选择，而且能承受小失败，那么从长期看来必定是赢。
 
 所以答案就是想想长期。你在乎的不是这一次的输赢，而是这一生的输赢。你要的不是一次赌对，而是一个能够多次赌对的系统。
 
