--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,16 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-05-29  你想不想要一个人生作弊器
+其实可以用很简单的方式判断自己的学习能力。学习能力的进阶，无非三个阶段，或者说，处于不同阶段的人，处于不同的境界：
+1. 能学会有人手把手教的东西；
+2. 能学会书本上所教授的技能；
+3. 能学会没有人能教授的技能；
+
+学习，从来都是创造惊喜、创造好运的最优路径。
+为什么呢？因为每个真正学会某种技能的人，一定有过这样的感叹： 真没想到在这里可以用上！
+
+
 ## 2017-05-22  认知升级最重要的工具是什么？
 能够真正用来变现的，事实上是“认知差异”：
 
