Adds reading notes.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -62,3 +62,10 @@ The limits of my language mean the limits of my world.
     -- Ludwig Wittgenstein
 
 If they don't just accept the strategy you hand them, they should suggest modifications to the plan based on their closeness to the details.
+
+## Peter Thiel
+I think, once you have a trend, you have many people doing it. And once you have many people doing something, you have lots of competition and little differentiation.
+
+Not everybody should do the same thing. There is something very odd about a society where the most talented people all get tracked toward the same elite colleges, where they end up studying the same small number of subjects and going into the same small number of careers.
+
+Are you going to college because it's a 4-year party? Is it a consumption decision? Is it an investment decision where you're investing in your future? Is it insurance? Or is it a tournament where you're just beating other people?
