--- a/note/...book_黑客与画家.md
+++ b/note/...book_黑客与画家.md
@@ -10,7 +10,7 @@
 到了 11 岁左右，他们在同伴中开辟了一个新的世界，并认为那个世界才是重要的，比家里的世界更重要。
 11 岁到 17 岁，人生的这个时期比其他任何时期更多地受到你的受欢迎程度的影响。
 
-校园生活的两大恐怖之处——残忍与无聊。
+校园生活的两大恐怖之处 —— 残忍与无聊。
 在一个人产生良知之前，这么就是一种娱乐。
 当你踩水的时候，你把水踩下去，你的身体就会被托起来。
 同样，在任何社会等级制度中，那些对自己没自信的人就会通过虐待他们眼中的下等人来突显自己的身份。
@@ -21,8 +21,10 @@
 表面上，学校的使命是教育儿童。
 事实上，学校的真正目的是把儿童都关在一个地方，以便大人们白天可以腾出手来把事情做完。
 我对这一点没有意见，让我困扰的不是把孩子关在监狱里，而是
+
   - 不告诉他们这一点
   - 把这监狱的大部分交给犯人来管理。
+
 孩子们被送进来，花 6 年时间记住一些毫无意义的事实，还要身处在一个由四肢发达的小巨人管理的世界。
 学校是一个很奇怪的，人为设计出来的体系，一半像是无菌室，一半像是野蛮洪荒之地。
 过去的社会中，青少年扮演着一个更积极的角色。工业化时代到来前，青少年都是某种形式的学徒。
@@ -76,6 +78,23 @@
     --《计算机程序的结构与解释》
 
 声望这个东西，总是经过漫长的时滞以后才会确立，它就像遥远星系发出的光，经过了许多光年才能被我们看到。
+
+
+## 3. 不能说的话
+历史的常态似乎就是，任何一个年代的人们，都会对一些荒谬的东西深信不疑。他们的信念还很坚定，只要有人稍微表示一点怀疑，就会惹来大麻烦。
+如果未来有人坐着时间机器来到我们这个时代，哪些话是他小心翼翼避免说出口的？我的这篇文章就想探讨这件事。
+如果某个观点在大部分时空都是不受禁止的，只有我们这个社会才把它当作禁忌，那么很可能是我们出错了。
+
+`
+15 世纪晚期，欧洲流行一种宽头鞋，原因是当时的法国皇帝查理八世长了六根脚趾。
+`
+
+大多数的斗争，不管它们实际上争的是什么，都会以思想斗争的形式表现出来。16 世纪的英国宗教改革本质上是为了争夺权力与财富，但是却表现为英国人要求自主的精神与罗马教廷腐化的控制之间的斗争。思想斗争更容易争取支持者。
+公司是否健康运作，可以用一个指标衡量，那就是对负面评价的容忍程度。做出伟大产品的公司，自我评价往往以 “批评” 和 “自嘲” 为主，而不是以 “肯定” 和 “表扬” 为主。
+你的策略，简单说，就是不赞同这个时代的任何一种歇斯底里，但是又不明确告诉别人到底不赞同哪一种歇斯底里。
+小时候，每个人都会鼓励你不断成长，变成一个心智成熟，不再耍小孩子脾气的人。但是，很少有人鼓励你继续成长，变成一个怀疑和抵制社会错误潮流的人。
+
+__如果自己就是潮水的一部分，怎么能看见潮水的方向呢？__
 
 
 ## 6. 如何创造财富
