Adds reading notes

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -69,3 +69,6 @@ I think, once you have a trend, you have many people doing it. And once you have
 Not everybody should do the same thing. There is something very odd about a society where the most talented people all get tracked toward the same elite colleges, where they end up studying the same small number of subjects and going into the same small number of careers.
 
 Are you going to college because it's a 4-year party? Is it a consumption decision? Is it an investment decision where you're investing in your future? Is it insurance? Or is it a tournament where you're just beating other people?
+
+## Seth Godin
+Because once you get enough bad ideas, then some good ones have to show up.
