--- a/note/...book_黑客与画家.md
+++ b/note/...book_黑客与画家.md
@@ -97,6 +97,16 @@
 __如果自己就是潮水的一部分，怎么能看见潮水的方向呢？__
 
 
+## 4. 良好的坏习惯
+只有深入了解当前的技术，黑客才能构想下一代技术。在计算机工业的历史上，新技术往往是由外部人员开发的。
+如果我们不可以研究当前的技术，不能思考如何改进它，那么我们怎样才能开发出新技术呢。
+> IBM 开发下一代电脑，但却是苹果发明的。计算机工业几大巨头合作研发下一代操作系统，但确实 Unix 胜出了。
+
+一个人们拥有言论自由和行动自由的社会，往往最有可能采纳最优方案，而不是采纳最有权势的人提出的方案。专制国家会变成腐败国家，腐败国家会变成贫穷国家，贫穷国家会变成弱小国家。
+如果读美国开国元勋的自述，你会发现他们听起来很像黑客。
+“反抗政府的精神，在某些场合是如此珍贵，我希望它永远保持活跃。 —— 杰弗逊”
+
+
 ## 6. 如何创造财富
 名人不适合用来举例，他们往往属于特例。
 > 异类不具有普适性
