--- a/note/...book_数学之美.md
+++ b/note/...book_数学之美.md
@@ -19,3 +19,26 @@
 自然语言在演变过程中，产生了词义和上下文相关的特性。因此，它的文法是比较复杂的上下文有关文法，而程序语言是我们人为设计的、便于计算机解码的上下文无关文法，相比自然语言简单得多。理解两者的计算量不可同日而语。
 
 对于上下文无关文法，算法的复杂度基本是语句长度的 2 次方，而对于上下文有关文法，计算复杂度基本上是语句长度的 6 次方。也就是说，长度同为 10 的程序语言和自然语言的语句，计算机对它们进行文法分析的计算量，前者是后者的一万倍。
+
+
+## 第 3 章  统计语言模型
+马尔可夫假设：
+假设任意一个词 w(i) 出现的概率只同它前面的词 w(i-1) 有关。
+
+条件概率：S 这个序列出现的概率等于每一个词出现的条件概率相乘
+P(S) = P(w1,w2,...,wn) = P(w1)·P(w2|w1)···P(wn|w1,w2,...,wn-1)
+
+N 元模型：
+假设一个词由前面的 N-1 个词决定。
+N 元模型的时间和空间复杂度都是 N 的指数函数，底数是词典的词汇量，一般在几万到几十万。因此 N 不能很大。N > 3 后效果提升就不是很显著了。
+
+大数定理：
+只要统计量足够，相对频度就等于概率。
+
+古德 - 图灵估计：
+训练统计语言模型的艺术在于解决好统计样本不足时的概率估计问题。在统计中相信可靠的统计数据，而对不可信的统计数据打折扣的一种概率估计方法，同时将折扣出来的那一小部分概率给予未看见的事件。
+对于频率超过一定阈值的词，它们的概率估计就是相对频度，对于频率小于这个阈值的词，它们的概率估计就小于它们的相对频度，出现次数越少的，折扣越多。对于未看见的词，也给予一个比较小的概率，而非零概率。
+
+
+## 第 4 章  谈谈分词
+统计语言模型很大程度上是依照 “大众的想法”，或者 “多数句子的用法”，而在特定情况下可能是错的。
