Adds reading notes.

--- a/note/...book_数学之美.md
+++ b/note/...book_数学之美.md
@@ -42,3 +42,25 @@ N 元模型的时间和空间复杂度都是 N 的指数函数，底数是词典
 
 ## 第 4 章  谈谈分词
 统计语言模型很大程度上是依照 “大众的想法”，或者 “多数句子的用法”，而在特定情况下可能是错的。
+
+
+## 第 5 章  隐含马尔可夫模型
+马尔可夫假设：
+随机过程中各个状态 s(t) 的概率分布，只与它的前一个状态 s(t-1) 有关，即 P(st|s1,s2,...,st-1) = P(st/st-1)。
+
+马尔可夫链：
+符合马尔可夫假设的随机过程称为马尔可夫过程，即：马尔可夫链。
+
+隐含马尔可夫模型：
+它是马尔可夫链的一个扩展：任一时刻 t 的状态 s(t) 是不可见的。但模型每个时刻 t 会输出一个可见状态 o(t)，而且 o(t) 跟 s(t) 相关且仅跟跟 s(t) 相关。这个称为独立输出假设。
+> 在语音识别中，输出的可见状态 o(t) 相当于每个 t 的语音，而需要求解 s(t) 的文字，计算得到一个 P(s1,s2,...,st) 的最大可能概率，就能识别出最可能的原始文字序列
+
+
+## 第 6 章  信息的度量和作用
+信息熵：
+一本 50 万字的中文书平均有多少信息量。常用汉子（一二级国标）有 7000 字。假如每个字等概率，那么需要 13 bit（2^13 = 8192）表示一个汉字。但汉字的使用频率是不均等的。实际上，前 10% 的汉字占常用文本的 95% 以上。考虑概率和上下文相关性，每个汉字的信息熵只有 5 bit 左右。所以一本 50 万字的中文书，信息量大约是 5 * 50w = 250w bit。
+这里的 250 万 bit 是个平均数，同样长度的书，所含的信息量可以相差很多。如果一本书重复的内容很多，它的信息量就小，冗余度就大。
+
+互信息：
+作为两个随机事件 “相关性” 的量化度量。
+> 自然语言处理中，用词的互信息（共同出现）来解决翻译的二义性问题。
