--- a/note/...column_精英日课.md
+++ b/note/...column_精英日课.md
@@ -5,6 +5,14 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-06-07  坚持坚持再坚持
+长期的坚持不是来自体能和意志力，而是来自乐观的精神，来自我们给自己讲的故事。故事都是虚构的，但是故事提供了工作和人生的意义。
+
+
+## 2017-06-05  为什么优等生不能改变世界
+成功学想把人变成算法，但人生从来都不是算法 —— 人生是矛盾。
+
+
 ## 2017-05-29  《人人说谎》解读4：“政治正确” 是虚伪的吗？
 想一套，做一套，说一套，现代世界就是这样。
 消除人们心里的偏见是几乎不可能的，那么虽然消除不了，但是社会习俗约定，凡是上不了台面的想法都不能公开说，则完全可行。这就是政治正确。
