--- a/note/...column_通往财富自由之路.md
+++ b/note/...column_通往财富自由之路.md
@@ -5,6 +5,23 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-06-05  投资世界里的最基本技能 —— 趋势判断
+在交易市场里，有一种人被称作“韭菜”，为什么呢？因为韭菜总是割掉一茬再长一茬……而那些“韭菜”就是注定会被收割的人。如何判断自己是不是“韭菜”呢？其实很简单的，只要你身处交易市场之中的时候，脑子里存在以下的闪念中的任何一个，你就是“韭菜” —— 确定无疑的“韭菜”：
+
+  - X 靠谱吗？你怎么看？你说 Y 能涨吗？
+  - X 已经太贵了，买不起，我去看看 Y 吧……
+  - 真倒霉，一买就跌一卖就涨！
+  - 刚才没听到你们说什么，我错过了什么吗？
+  - 都一整天了，咋也不见涨呢！
+  - 靠，赚了赚了！我这就去换辆车！
+  - 跌成屎了，媳妇要跟我离婚！
+  - 唉！等我借来钱，已经涨上天了！
+  - 他们运气真好！我运气真差！
+  - 这帮家伙！你们都是骗子！
+
+这世界上所有的事情其实都是投资，成长是用自己的注意力向自己投资；婚姻是双方共同投资自己的各种资源去创造一个更好的家族；工作是投资，创业还是投资，一切都是投资...
+
+
 ## 2017-05-29  你想不想要一个人生作弊器
 其实可以用很简单的方式判断自己的学习能力。学习能力的进阶，无非三个阶段，或者说，处于不同阶段的人，处于不同的境界：
 1. 能学会有人手把手教的东西；
