Adds reading notes.

--- a/note/...column_硅谷来信.md
+++ b/note/...column_硅谷来信.md
@@ -5,6 +5,10 @@
 --------------------------------------------------------------------------------
 
 
+## 2017-06-09  怎样看待富人的财富 —— 聊聊社会的公平性
+维护社会的公平性，关键在于给人平等的机会，而不是同样的收入。怎样给人平等的机会呢？这个问题非常复杂，但是有一件事必须做，就是限制超级权力。
+
+
 ## 2017-05-29  为什么中国不会掉入中等收入陷阱
 中等收入陷阱：是指当一个国家人均GDP达到1万美元左右时，它的发展陷入长期停滞，债务增加，社会出现严重动荡。而具有代表性的国家大多在拉美，因此有时又称之为“拉美国家中等收入陷阱”。
 世界上几乎所有国家的财政都是赤字，而解决赤字的方法只有两个，一个是印钞票，一个是发行国债。中国采用了前一种，美国采用了后一种。不论采用哪一种，最后都要有人买单。
