Adds reading notes.

--- a/note/...book_黑客与画家.md
+++ b/note/...book_黑客与画家.md
@@ -107,6 +107,15 @@ __如果自己就是潮水的一部分，怎么能看见潮水的方向呢？__
 “反抗政府的精神，在某些场合是如此珍贵，我希望它永远保持活跃。 —— 杰弗逊”
 
 
+## 5. 另一条路
+设计桌面软件就像设计一幢大楼，而设计互联网软件就像设计一座城市。
+构思这种东西有一个特点，那就是它会导致更多的构思。你有没有注意过，坐下来写东西的时候，一般的构思是写作时产生的？软件也是这样。实现某个构思，会带来更多的构思。事实上，讲一个构思束之高阁，甚至会限制新构思的产生。
+
+没有盗版是一种“优势”，但也是一个问题。一定数量的盗版对软件公司是有好处的。不管你的软件定价多少，有些用户永远都不会购买。如果这样的用户使用盗版，你并没有任何损失。事实上，你反而赚到了，因为你的软件现在多了一个用户，市场影响力就更大了一些，而这个用户可能毕业以后就会出钱购买你的软件。
+
+管理企业其实很简单，只要记住两点就可以了：做出用户习惯的产品，保证开支小于收入。只要做到这两点，你就会超过大多数创业公司。随着事业的发展，你自己就能琢磨出来其他诀窍。
+
+
 ## 6. 如何创造财富
 名人不适合用来举例，他们往往属于特例。
 > 异类不具有普适性
@@ -137,6 +146,25 @@ __如果自己就是潮水的一部分，怎么能看见潮水的方向呢？__
 
 真正创业以后，你的竞争对手决定了你到底要有多辛苦。
 创业的付出和回报虽然总体上是成比例的，但是在个体上是不成比例的。
+
+
+## 7. 关注贫富分化
+财富与金钱是两个概念。金钱只是用来交易财富的一种手段，财富才是有价值的东西，我们购买的商品和服务都属于财富。
+财富是你必须自己创造出来的东西。由于每个人创造财富的能力和欲望强烈程度都不一样，所以每个人创造财富的数量很不平等。
+财富是用工作成果衡量的，而不是用它花费的成本衡量的。
+
+技术无法使其变得更便宜的唯一东西，就是品牌。
+只要存在对某种商品的需求，技术就会发挥作用，将这种商品的价格变得很低，从而可以大量销售。
+技术在加大收入差距的同时，缩小了大部分的其他差距。
+
+现代社会的收入差距扩大是一种健康的信号。技术是的生产率的差异加速扩大，如果这种扩大没有反映在收入上面，只有三种可能的解释：
+
+  - 技术革新停顿了
+  - 那些创造大部分财富的人停止工作了
+  - 创造财富的人没有获得报酬
+
+只要你压制收入差距的扩大，不管是用偷窃私人财产的做法（封建社会），还是用高额税收的做法（某些现代政府），最终结果看来都是一样的，那就是社会作为一个整体变得更贫穷了。
+一个社会需要有富人，这要不是因为你需要富人的支出创造就业机会，而是因为他们在致富过程做出的事情。
 
 
 ## 9. 设计者的品味
