Adds reading notes of Hacker & Painter

--- a/note/...book_黑客与画家.md
+++ b/note/...book_黑客与画家.md
@@ -167,6 +167,9 @@ __如果自己就是潮水的一部分，怎么能看见潮水的方向呢？__
 一个社会需要有富人，这要不是因为你需要富人的支出创造就业机会，而是因为他们在致富过程做出的事情。
 
 
+## 8. 防止垃圾邮件的一种方法
+
+
 ## 9. 设计者的品味
 喜欢一件东西，却不知道为什么自己喜欢它，原因可能是这件东西是美的，但也可能因为他们的母亲也拥有同样的东西，
 或者杂志上某个明星使用它，或者仅仅因为它的价格很昂贵。人类的思想就是没有经过整理的无数杂念的混合。
@@ -238,6 +241,28 @@ __如果自己就是潮水的一部分，怎么能看见潮水的方向呢？__
 所有机器都有一张操作命令清单，这种操作命令的总和就是计算机的机器语言。
 汇编语言相比机器语言就是换了一个更人性化的名字。
 
+
+## 11. 一百年后的编程语言
+编程语言进化缓慢的原因在于它们并不是真正的技术。语言只是一种书写法，而程序则是一种严格符合规则的描述，以书面形式记录计算机应该如何解决你的问题。所以，编程语言的进化速度更像数学符号的进化速度，而不像真正的技术（比如交通或通信技术）的进化速度。数学符号的进化是缓慢的渐变式变化，而不是真正技术的那种跳跃式发展。
+
+文学研究者的任何成果几乎对文学创作者都毫无影响。
+
+
+## 12. 拒绝平庸
+程序语言不仅仅是技术，也是一种习惯性思维，非常难于改变。
+
+技术的变化速度通常是很快的。但是，编程语言不一样，与其说它是技术，还不如说是程序员的思考模式。编程语言是技术和宗教的混合物。
+大概在 1960 年，Lisp 语言引入了垃圾回收机制。
+
+
+## 13. 书呆子的复仇
+## 14. 梦寐以求的编程语言
+对于制造工具的人来说，总是会有用户以违背你本意的方式使用你的工具。
+你只需要不停地重复同一句话，最终人们将会开始倾听。人们真正注意到你的时候，不是第一眼看到你站在那里，而是发现过了这么久你居然还在那里。
+
+“最好的文字来自不停的修改。”
+    -- E.B.White
+    
 
 ## 15. 设计与研究
 设计与研究的区别就在于，前者追求好（good），后者追求新（new）。
