--- a/note/...book_唐诗.md
+++ b/note/...book_唐诗.md
@@ -24,6 +24,7 @@
 乱花渐欲迷人眼，浅草才能没马蹄。               
     --《钱塘湖春行》
 
+
 ## 李商隐
 洞庭波冷晓侵云，日日征帆送远人。
 几度木兰舟上望，不知元是此花身。
@@ -32,6 +33,23 @@
 人生何处不离群？世路干戈惜暂分。雪岭未归天外使，松州犹驻殿前军。
 座中醉客延醒客，江上晴云杂雨云。美酒成都勘送老，当垆仍是卓文君。
     --《杜工部蜀中离席》
+
+
+## 王昌龄
+寒雨连江夜入吴，平明送客楚山孤。
+洛阳亲友如相问，一片冰心在玉壶。
+    --《芙蓉楼送辛渐》
+
+青海长云暗雪山，孤城遥望玉门关。
+黄沙百战穿金甲，不破楼兰终不还。
+    --《从军行》其四
+
+秦时明月汉时关，万里长征人未还。
+但使龙城飞将在，不教胡马度阴山。
+
+骝马新跨白玉鞍，战罢沙场月色寒。
+城头铁鼓声犹振，匣里金刀血未干。
+    --《出塞》二首
 
 
 ## 其他
@@ -96,10 +114,6 @@
 嗟乎！时运不齐，命途多舛。冯唐易老，李广难封。
 屈贾谊于长沙，非无圣主；窜梁鸿于海曲，岂乏明时？所赖君子见机，达人知命。老当益壮，宁移白首之心？穷且益坚，不坠青云之志。   
     -- 王勃《滕王阁序》
-
-寒雨连江夜入吴，平明送客楚山孤。
-洛阳亲友如相问，一片冰心在玉壶。
-    -- 王昌龄《芙蓉楼送辛渐》
 
 黄河远上白云间，一片孤城万仞山。
 羌笛何须怨杨柳，春风不度玉门关。
