Adds reading notes of ToT.

--- a/note/...book_tools_of_titans.md
+++ b/note/...book_tools_of_titans.md
@@ -72,3 +72,10 @@ Are you going to college because it's a 4-year party? Is it a consumption decisi
 
 ## Seth Godin
 Because once you get enough bad ideas, then some good ones have to show up.
+
+## Scott Adams
+Losers have goals. Winners have systems.
+"What persistent skills or relationships can I develop?" versus "What short-term goal can I achieve?"
+blogging was a system, not a goal.
+
+I'm thinking of these ideas and they're flowing through my head, I'm monitoring my body; I'm not monitoring my mind. And when my body changes, I have something that other people are going to care about, too.
