Adds reading notes of "BoM"

--- a/note/...book_数学之美.md
+++ b/note/...book_数学之美.md
@@ -64,3 +64,34 @@ N 元模型的时间和空间复杂度都是 N 的指数函数，底数是词典
 互信息：
 作为两个随机事件 “相关性” 的量化度量。
 > 自然语言处理中，用词的互信息（共同出现）来解决翻译的二义性问题。
+
+
+## 第 7 章  贾里尼克和现代语言处理
+> 关于作者导师，自然语言处理之父的故事和观点
+
+教育观点：
+
+  1. 小学生和中学生没必要花那么多时间读书，而他们的社会经验、生活能力以及在那时树立起的志向将帮助他们的一生。
+  2. 中学阶段花很多时间比同伴多读的课程，上大学后用很短时间就能读完，因为在大学阶段，人的理解力要强的多。
+  3. 学习和教育是持续一辈子的过程。
+  4. 书本的内容可以早学，也可以晚学，但是错过了成长阶段却是无法补回来的，因此少年班的做法不足取。
+
+在贾里尼克之前，科学家们把语音识别问题当作人工智能和模式匹配问题。而贾里尼克把它当成通信问题，并用两个隐含马尔可夫模型（声学模型和语言模型）把语音识别概括得清清楚楚。这个框架结构至今仍对语音和语言处理影响深远。它不仅从根本上使得语音识别有实用的可能，而且奠定了今天自然语言处理的基础。
+
+贾里尼克教授在学术上给我最大的帮助就是提高了我在学术上的境界。他告诉我最多的是：什么方法不好。在这一点上与股神巴菲特给和他吃饭的投资人的建议有异曲同工之处。巴菲特和那些投资人讲，你们都非常聪明，不需要我告诉你们做什么，我只需要告诉你们不要去做什么。
+
+
+## 第 8 章  简单之美 —— 布尔代数和搜索引擎
+搜索产品都是提炼成下载、索引和排序这三种基本服务，这就是搜索的“道”。
+搜索引擎的索引就变成了一张大表：表的每一行对应一个关键词，而每一个关键词后面跟着一组数字，是包含该关键词的文献序号。
+
+
+## 第 9 章  图论和网络爬虫
+欧拉定理：如果一个图能够从一个顶点出发，每条边不重复地遍历一遍回到这个顶点，那么每一顶点的度必须为偶数。
+度：对于图中的每一个顶点，将与之相连的边的数量定义为它的度。
+
+
+## 第 10 章  PageRank —— Google 的民主表决式网页排名技术
+如果一个网页被很多其他网页所链接，说明它受到普遍的承认和信赖，那么它的排名就高，这就是 PageRank 的核心思想。
+对来自不同网页的链接区别对待，因为那些排名高的网页链接更可靠，于是要给这些链接比较大的权重。
+现在麻烦来了，计算搜索结果的网页排名过程中需要用到网页本身的排名，这不成了“先有鸡还是先有蛋”的问题了吗？
